--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,33 +3,29 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_dashboard"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Dashboard" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_transaction"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Transactions" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_setting"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Setting" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Master Data">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_msmenu"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Menu" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_mscustomer"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Customer" />
         </menu>
     </item>
 
