--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -4,10 +4,57 @@
     android:id="@+id/activity_transaction"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.fmy.postthink.TransactionActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/colorRedDarkAlpha75"
+        android:weightSum="2">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TransactionMainWidgetWrapper"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/txt_tr_widget_order_sm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/TransactionMainWidgetTextSmall"
+                android:text="Total Num Orders"/>
+            <TextView
+                android:id="@+id/txt_tr_widget_order_lg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txt_tr_widget_order_sm"
+                style="@style/TransactionMainWidgetTextLarge"
+                android:text="18X"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TransactionMainWidgetWrapper"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/txt_tr_widget_value_sm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/TransactionMainWidgetTextSmall"
+                android:text="Total Trans Value"/>
+            <TextView
+                android:id="@+id/txt_tr_widget_value_lg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txt_tr_widget_value_sm"
+                style="@style/TransactionMainWidgetTextLarge"
+                android:text="1.785K"/>
+        </RelativeLayout>
 
+    </LinearLayout>
+    <FrameLayout
+        android:id="@+id/trans_fragment_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </FrameLayout>
 </RelativeLayout>
